--- a/_data/take5/GYM-5056.yml
+++ b/_data/take5/GYM-5056.yml
@@ -13,7 +13,7 @@ subtopics:
   - label: "Portfolio Development"
 video_ID: er1hK-a7pQA
 video_duration: "4:52"
-featured: false
+featured: true
 short_description: "In this tutorial, you’ll learn three tips on how to write compelling case studies for your online portfolio."
 project_file_source:
 project_files:
