replace `event_title` with `title`

--- a/_data/webinars/web0011-prototyping-as-process.yml
+++ b/_data/webinars/web0011-prototyping-as-process.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0011-prototyping-as-process
-event_title: "UX Design: Prototyping <span class=\"nowrap\">as Process</span>"
+title: "UX Design: Prototyping <span class=\"nowrap\">as Process</span>"
 event_guests: "with Dave Rupert <span class=\"nowrap\">and James Young</span>"
 description: "Over the years, prototyping has become an integral part of digital product development. Learn the ins and outs of modern design documentation and the new tools that aim to improve it from three industry experts."
 permalink: /webinars/prototyping-as-process
