--- a/_data/webinars/web0001-designing-for-understanding.yml
+++ b/_data/webinars/web0001-designing-for-understanding.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0001-designing-for-understanding
-event_title: "Designing for Understanding: <span class=\"nowrap\">Create Meaningful</span> Interactions for Web <span class=\"nowrap\">and Mobile</span>"
+title: "Designing for Understanding: <span class=\"nowrap\">Create Meaningful</span> Interactions for Web <span class=\"nowrap\">and Mobile</span>"
 event_guests: "with Stephanie Hay and <span class=\"nowrap\">John Hodgins</span>"
 description: "A conversation about how content, UX, and design work together to create meaningful interactions with special guests Stephanie Hay and John Hodgins."
 permalink: /webinars/designing-for-understanding
