--- a/_data/webinars/web0002-designing-for-real-people.yml
+++ b/_data/webinars/web0002-designing-for-real-people.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0002-designing-for-real-people
-event_title: "Designing for <span class=\"nowrap\">Real People:</span> <span class=\"nowrap\">Making the Case</span> for Meaningful UX"
+title: "Designing for <span class=\"nowrap\">Real People:</span> <span class=\"nowrap\">Making the Case</span> for Meaningful UX"
 event_guests: "with Eric Meyer and <span class=\"nowrap\">Jim Webb</span>"
 description: "A conversation about the benefits of user research and making the case to stakeholders on how to get it done right with special guests Eric Meyer and Jim Webb."
 permalink: /webinars/designing-for-real-people
