--- a/_data/webinars/web0003-right-sizing-your-rapid-prototypes.yml
+++ b/_data/webinars/web0003-right-sizing-your-rapid-prototypes.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0003-right-sizing-your-rapid-prototypes
-event_title: "Right-Sizing Your Rapid Prototypes for Web & Mobile"
+title: "Right-Sizing Your Rapid Prototypes for Web & Mobile"
 event_guests: "with Erin Young and <span class=\"nowrap\">Tracy Singleton</span>"
 description: "A conversation about choosing the appropriate fidelity of breadth, depth, and content for rapid prototyping with special guests Erin Young and Tracy Singleton."
 permalink: /webinars/right-sizing-your-rapid-prototypes
