--- a/_data/webinars/web0004-web-design-is-hard.yml
+++ b/_data/webinars/web0004-web-design-is-hard.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0004-web-design-is-hard
-event_title: "Web Design is Hard"
+title: "Web Design is Hard"
 event_guests: "with Jeffrey Zeldman and <span class=\"nowrap\">Aaron Gustafson</span>"
 description: "A conversation about navigating the complex world of web design education with our friends Jeffrey Zeldman and Aaron Gustafson."
 permalink: /webinars/web-design-is-hard
