--- a/_data/webinars/web0005-state-of-responsive-web-design.yml
+++ b/_data/webinars/web0005-state-of-responsive-web-design.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0005-state-of-responsive-web-design
-event_title: "The State of Responsive Web Design"
+title: "The State of Responsive Web Design"
 event_guests: "with Ethan Marcotte and <span class=\"nowrap\">Karen McGrane</span>"
 description: "A conversation about the past, present, and future state of responsive web design with special guests Ethan Marcotte and Karen McGrane."
 permalink: /webinars/state-of-responsive-web-design
