--- a/_data/webinars/web0006-keeping-up-with-javascript.yml
+++ b/_data/webinars/web0006-keeping-up-with-javascript.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0006-keeping-up-with-javascript
-event_title: "Keeping Up with JavaScript is a <span class=\"nowrap\">Full-time Job</span>"
+title: "Keeping Up with JavaScript is a <span class=\"nowrap\">Full-time Job</span>"
 event_guests: "with Kevin Chisholm and <span class=\"nowrap\">Keith Peters</span>"
 description: "A conversation about the ever-changing JavaScript landscape with special guests Kevin Chisholm and Keith Peters."
 permalink: /webinars/keeping-up-with-javascript
