--- a/_data/webinars/web0007-design-systems-and-creativity.yml
+++ b/_data/webinars/web0007-design-systems-and-creativity.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0007-design-systems-and-creativity
-event_title: "<span class=\"nowrap\">Design Systems</span> <span class=\"nowrap\">and Creativity:</span> <span class=\"nowrap\">Unlikely Allies</span>"
+title: "<span class=\"nowrap\">Design Systems</span> <span class=\"nowrap\">and Creativity:</span> <span class=\"nowrap\">Unlikely Allies</span>"
 event_guests: "with Brad Frost and <span class=\"nowrap\">Sophie Shepherd</span>"
 description: "A conversation about creativity and design systems with special guests Brad Frost and Sophie Shepherd."
 permalink: /webinars/design-systems-and-creativity
