--- a/_data/webinars/web0008-rethinking-full-stack.yml
+++ b/_data/webinars/web0008-rethinking-full-stack.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0008-rethinking-full-stack
-event_title: "Rethinking <span class=\"nowrap\">Full Stack: </span><br/>Cost and <span class=\"nowrap\">Compromise</span>"
+title: "Rethinking <span class=\"nowrap\">Full Stack: </span><br/>Cost and <span class=\"nowrap\">Compromise</span>"
 event_guests: "with Eric Meyer <span class=\"nowrap\">and Dan Mall</span>"
 description: "A conversation about the difference between front end and full stack developers with special guests Eric Meyer and Dan Mall."
 permalink: /webinars/rethinking-full-stack
