--- a/_data/webinars/web0009-future-of-web-layout.yml
+++ b/_data/webinars/web0009-future-of-web-layout.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0009-future-of-web-layout
-event_title: "The Future of <span class=\"nowrap\">Web Layout</span>"
+title: "The Future of <span class=\"nowrap\">Web Layout</span>"
 event_guests: "with Rachel Andrew <span class=\"nowrap\">and Jason Pamental</span>"
 description: "A webinar discussing new advances in web layout techniques that will impact web designers and developers in the near future."
 permalink: /webinars/future-of-web-layout
