--- a/_data/webinars/web0010-planning-before-pixels.yml
+++ b/_data/webinars/web0010-planning-before-pixels.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0010-planning-before-pixels
-event_title: "Planning Before Pixels: <span class=\"nowrap\">Create with Purpose</span>"
+title: "Planning Before Pixels: <span class=\"nowrap\">Create with Purpose</span>"
 event_guests: "with Jen Kramer <span class=\"nowrap\">and Heather O'Neill</span>"
 description: "Learn how (and why) to take the guesswork out of designing from the authors of <cite>Before You Code</cite>, Jen Kramer and Heather O'Neill, plus Jeremy Osborn."
 permalink: /webinars/planning-before-pixels
