--- a/_data/webinars/web0012-remote-work.yml
+++ b/_data/webinars/web0012-remote-work.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0012-remote-work
-event_title: "Remote Work: <span class=\"nowrap\">Can It Work</span> <span class=\"nowrap\">for You?</span>"
+title: "Remote Work: <span class=\"nowrap\">Can It Work</span> <span class=\"nowrap\">for You?</span>"
 event_guests: "with Richard Banfield <span class=\"nowrap\">and Darren Buckner</span>"
 description: "Join us for an hour-long webinar about the benefits and challenges of remote work — from communication and collaboration to time zones and transparency."
 permalink: /webinars/remote-work
