--- a/_data/webinars/web0013-decade-of-responsive-web-design.yml
+++ b/_data/webinars/web0013-decade-of-responsive-web-design.yml
@@ -1,6 +1,6 @@
 ---
 event_ID: web0013-decade-of-responsive-web-design
-event_title: "A Decade of Responsive <span class=\"nowrap\">Web Design</span>"
+title: "A Decade of Responsive <span class=\"nowrap\">Web Design</span>"
 event_guests: "with Ethan Marcotte"
 description: "Join us for a webinar with Ethan Marcotte as we celebrate the past decade of his groundbreaking work. We’ll be discussing inclusivity, accessibility, and all things responsive web design."
 permalink: /webinars/decade-of-responsive-web-design
