`course_type` to `type`

--- a/_data/courses/GYM-003.yml
+++ b/_data/courses/GYM-003.yml
@@ -2,7 +2,7 @@
 id: GYM-003
 title: "Grid Layout in Bootstrap 3"
 date: 2022-05-26T00:00:00-04:00
-course_type: short
+type: short
 live: false
 retired_message:
   1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course, but you can still view the lessons. <span class='text-wrap'>We recommend watching the tutorial <a href='https://thegymnasium.com/courses/take5/prototyping-in-the-browser-with-css-grid-layout'>Prototyping in the Browser with CSS Grid Layout</a> instead.</span>"
