--- a/_data/courses/GYM-004.yml
+++ b/_data/courses/GYM-004.yml
@@ -2,7 +2,7 @@
 id: GYM-004
 title: "Creating A WordPress Theme"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 live: true
 url: /courses/GYM/004/0/about
 img: /img/course-artwork/png/gym-004.png
