--- a/_data/courses/GYM-007.yml
+++ b/_data/courses/GYM-007.yml
@@ -2,7 +2,7 @@
 id: GYM-007
 title: "Structuring and Organizing HTML5 Forms"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 live: true
 url: /courses/GYM/007/0/about
 img: /img/course-artwork/png/gym-007.png
