--- a/_data/courses/GYM-109.yml
+++ b/_data/courses/GYM-109.yml
@@ -2,7 +2,7 @@
 id: GYM-109
 title: "Responsive Web Design Fundamentals"
 date: 2019-10-28T00:00:00-04:00
-course_type: full
+type: full
 live: true
 url: /courses/course-v1:GYM+109+0/about
 img: /img/course-artwork/png/gym-109.png
