--- a/_data/take5/GYM-5011.yml
+++ b/_data/take5/GYM-5011.yml
@@ -2,7 +2,7 @@
 id: GYM-5011
 title: "Using Smart Layout in Sketch"
 date: 2019-11-04T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5011/
 img: /img/take5/posters/gym-5011.jpg
 live: true
