--- a/_data/take5/GYM-5017.yml
+++ b/_data/take5/GYM-5017.yml
@@ -2,7 +2,7 @@
 id: GYM-5017
 title: "How to Tell the Story of a Mid-Career Pivot"
 date: 2019-11-12T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5017/
 img: /img/take5/posters/gym-5017.jpg
 live: true
