--- a/_data/take5/GYM-5026.yml
+++ b/_data/take5/GYM-5026.yml
@@ -2,7 +2,7 @@
 id: GYM-5026
 title: "Publishing Your First GitHub Pages Website"
 date: 2020-02-03T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5026/
 img: /img/take5/posters/gym-5026.jpg
 live: true
