--- a/_data/take5/GYM-5028.yml
+++ b/_data/take5/GYM-5028.yml
@@ -2,7 +2,7 @@
 id: GYM-5028
 title: "Adding a Dark Mode Theme to Your Website"
 date: 2020-02-17T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5028/
 img: /img/take5/posters/gym-5028.jpg
 live: true
