--- a/_data/take5/GYM-5035.yml
+++ b/_data/take5/GYM-5035.yml
@@ -2,7 +2,7 @@
 id: GYM-5035
 title: "Responsively Designing with Viewport Units"
 date: 2020-06-25T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5035/
 img: /img/take5/posters/gym-5035.jpg
 live: true
