--- a/_data/take5/GYM-5038.yml
+++ b/_data/take5/GYM-5038.yml
@@ -2,7 +2,7 @@
 id: GYM-5038
 title: "Making Headings and Lists More Accessible"
 date: 2020-09-15T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5038/
 img: /img/take5/posters/gym-5038.jpg
 live: true
