--- a/_data/take5/GYM-5039.yml
+++ b/_data/take5/GYM-5039.yml
@@ -2,7 +2,7 @@
 id: GYM-5039
 title: "Designing Accessible Data Tables"
 date: 2020-09-22T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5039/
 img: /img/take5/posters/gym-5039.jpg
 live: true
