--- a/_data/take5/GYM-5044.yml
+++ b/_data/take5/GYM-5044.yml
@@ -2,7 +2,7 @@
 id: GYM-5044
 title: "Designing Accessible Forms for Everyone"
 date: 2020-10-27T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5044/
 img: /img/take5/posters/gym-5044.jpg
 live: true
