--- a/_data/take5/GYM-5046.yml
+++ b/_data/take5/GYM-5046.yml
@@ -2,7 +2,7 @@
 id: GYM-5046
 title: "Creating Accessible Video and Audio Content"
 date: 2020-11-10T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5046/
 img: /img/take5/posters/gym-5046.jpg
 live: true
