--- a/_data/take5/GYM-5048.yml
+++ b/_data/take5/GYM-5048.yml
@@ -2,7 +2,7 @@
 id: GYM-5048
 title: "Using Motion and Web Animation Responsibly"
 date: 2020-11-24T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5048/
 img: /img/take5/posters/gym-5048.jpg
 live: true
