--- a/_data/take5/GYM-5049.yml
+++ b/_data/take5/GYM-5049.yml
@@ -2,7 +2,7 @@
 id: GYM-5049
 title: "Creating Variants in Figma"
 date: 2021-06-01T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5049/
 img: /img/take5/posters/gym-5049.jpg
 live: true
