--- a/_data/take5/GYM-5051.yml
+++ b/_data/take5/GYM-5051.yml
@@ -2,7 +2,7 @@
 id: GYM-5051
 title: "Advanced Auto Layout in Figma"
 date: 2021-06-29T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5051/
 img: /img/take5/posters/gym-5051.jpg
 live: true
