--- a/_data/take5/GYM-5052.yml
+++ b/_data/take5/GYM-5052.yml
@@ -2,7 +2,7 @@
 id: GYM-5052
 title: "Making a Great First Impression with Your Portfolio"
 date: 2022-08-22T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5052/
 img: /img/take5/posters/gym-5052.jpg
 live: true
