--- a/_data/courses/GYM-001.yml
+++ b/_data/courses/GYM-001.yml
@@ -2,7 +2,7 @@
 id: GYM-001
 title: "Defeating Busy"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 url: /courses/GYM/001/0/about
 img: /img/course-artwork/png/gym-001.png
 live: true
