--- a/_data/courses/GYM-002.yml
+++ b/_data/courses/GYM-002.yml
@@ -2,7 +2,7 @@
 id: GYM-002
 title: "Introducing Node.js"
 date: 2022-05-27T00:00:00-04:00
-course_type: short
+type: short
 live: false
 retired_message:
   1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course, but you can still view the lessons. <span class='text-wrap'>We recommend taking the updated course <a href='https://thegymnasium.com/courses/course-v1:GYM+012+0/about'>Introduction to Node.js</a> (and earning a badge) instead.</span>"
