--- a/_data/courses/GYM-006.yml
+++ b/_data/courses/GYM-006.yml
@@ -2,7 +2,7 @@
 id: GYM-006
 title: "Introduction to Git and GitHub"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 live: true
 url: /courses/GYM/006/0/about
 img: /img/course-artwork/png/gym-006.png
