--- a/_data/courses/GYM-008.yml
+++ b/_data/courses/GYM-008.yml
@@ -2,7 +2,7 @@
 id: GYM-008
 title: "Advanced Rapid Prototyping with Axure"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 live: false
 retired_message:
   1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course, but you can still view the lessons."
