--- a/_data/courses/GYM-013.yml
+++ b/_data/courses/GYM-013.yml
@@ -2,7 +2,7 @@
 id: GYM-013
 title: "3D Modeling for Virtual Reality Creation"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 live: true
 url: /courses/course-v1:GYM+013+0/about
 img: /img/course-artwork/png/gym-013.png
