--- a/_data/courses/GYM-014.yml
+++ b/_data/courses/GYM-014.yml
@@ -2,7 +2,7 @@
 id: GYM-014
 title: "Working with Atomic Design and Pattern Lab"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 live: true
 url: /courses/course-v1:GYM+014+0/about
 img: /img/course-artwork/png/gym-014.png
