--- a/_data/courses/GYM-016.yml
+++ b/_data/courses/GYM-016.yml
@@ -2,7 +2,7 @@
 id: GYM-016
 title: "Designing Accessible and Responsive Websites"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 live: true
 url: /courses/course-v1:GYM+016+0/about
 img: /img/course-artwork/png/gym-016.png
