--- a/_data/courses/GYM-017.yml
+++ b/_data/courses/GYM-017.yml
@@ -2,7 +2,7 @@
 id: GYM-017
 title: "Design Systems for Everyone"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 live: true
 url: /courses/course-v1:GYM+017+0/about
 img: /img/course-artwork/png/gym-017.png
