--- a/_data/courses/GYM-020.yml
+++ b/_data/courses/GYM-020.yml
@@ -2,7 +2,7 @@
 id: GYM-020
 title: "Design Systems for Product Managers"
 date: 2019-10-28T00:00:00-04:00
-course_type: short
+type: short
 live: true
 url: /courses/course-v1:GYM+020+0/about
 img: /img/course-artwork/png/gym-020.png
