--- a/_data/courses/GYM-102.yml
+++ b/_data/courses/GYM-102.yml
@@ -2,7 +2,7 @@
 id: GYM-102
 title: "jQuery Building Blocks"
 date: 2019-10-28T00:00:00-04:00
-course_type: full
+type: full
 live: true
 url: /courses/GYM/102/0/about
 img: /img/course-artwork/png/gym-102.png
