--- a/_data/courses/GYM-103.yml
+++ b/_data/courses/GYM-103.yml
@@ -2,7 +2,7 @@
 id: GYM-103
 title: "UX Fundamentals"
 date: 2019-10-28T00:00:00-04:00
-course_type: full
+type: full
 live: true
 url: /courses/GYM/103/0/about
 img: /img/course-artwork/png/gym-103.png
