--- a/_data/courses/GYM-104.yml
+++ b/_data/courses/GYM-104.yml
@@ -2,7 +2,7 @@
 id: GYM-104
 title: "JavaScript Foundations"
 date: 2019-10-28T00:00:00-04:00
-course_type: full
+type: full
 live: true
 url: /courses/GYM/104/0/about
 img: /img/course-artwork/png/gym-104.png
