--- a/_data/courses/GYM-106.yml
+++ b/_data/courses/GYM-106.yml
@@ -2,7 +2,7 @@
 id: GYM-106
 title: "Information Design & Visualization Fundamentals"
 date: 2019-10-28T00:00:00-04:00
-course_type: full
+type: full
 live: true
 url: /courses/GYM/106/0/about
 img: /img/course-artwork/png/gym-106.png
