--- a/_data/courses/GYM-108.yml
+++ b/_data/courses/GYM-108.yml
@@ -2,7 +2,7 @@
 id: GYM-108
 title: "JavaScript and jQuery Survival Guide"
 date: 2019-10-28T00:00:00-04:00
-course_type: full
+type: full
 live: true
 url: /courses/course-v1:GYM+108+0/about
 img: /img/course-artwork/png/gym-108.png
