--- a/_data/take5/GYM-5001.yml
+++ b/_data/take5/GYM-5001.yml
@@ -2,7 +2,7 @@
 id: GYM-5001
 title: "Making a CSS Parallax Effect"
 date: 2019-10-28T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5001/
 img: /img/take5/posters/gym-5001.jpg
 live: true
