--- a/_data/take5/GYM-5003.yml
+++ b/_data/take5/GYM-5003.yml
@@ -2,7 +2,7 @@
 id: GYM-5003
 title: "Adding a CSS Gradient Overlay to an Image"
 date: 2019-10-30T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5003/
 img: /img/take5/posters/gym-5003.jpg
 live: true
