--- a/_data/take5/GYM-5004.yml
+++ b/_data/take5/GYM-5004.yml
@@ -2,7 +2,7 @@
 id: GYM-5004
 title: "Working with CSS Feature Queries"
 date: 2019-10-31T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5004/
 img: /img/take5/posters/gym-5004.jpg
 live: true
