--- a/_data/take5/GYM-5005.yml
+++ b/_data/take5/GYM-5005.yml
@@ -2,7 +2,7 @@
 id: GYM-5005
 title: "Creating a Duotone with CSS"
 date: 2019-11-01T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5005/
 img: /img/take5/posters/gym-5005.jpg
 live: true
