--- a/_data/take5/GYM-5006.yml
+++ b/_data/take5/GYM-5006.yml
@@ -2,7 +2,7 @@
 id: GYM-5006
 title: "Leading a Card Sorting Session"
 date: 2019-11-18T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5006/
 img: /img/take5/posters/gym-5006.jpg
 live: true
