--- a/_data/take5/GYM-5007.yml
+++ b/_data/take5/GYM-5007.yml
@@ -2,7 +2,7 @@
 id: GYM-5007
 title: "Conducting Customer Interviews"
 date: 2019-11-19T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5007/
 img: /img/take5/posters/gym-5007.jpg
 live: true
