--- a/_data/take5/GYM-5008.yml
+++ b/_data/take5/GYM-5008.yml
@@ -2,7 +2,7 @@
 id: GYM-5008
 title: "Writing Effective Survey Questions"
 date: 2019-11-20T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5008/
 img: /img/take5/posters/gym-5008.jpg
 live: true
