--- a/_data/take5/GYM-5009.yml
+++ b/_data/take5/GYM-5009.yml
@@ -2,7 +2,7 @@
 id: GYM-5009
 title: "Leading Your First Usability Test"
 date: 2019-11-21T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5009/
 img: /img/take5/posters/gym-5009.jpg
 live: true
