--- a/_data/take5/GYM-5010.yml
+++ b/_data/take5/GYM-5010.yml
@@ -2,7 +2,7 @@
 id: GYM-5010
 title: "Using the KJ Method"
 date: 2019-11-22T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5010/
 img: /img/take5/posters/gym-5010.jpg
 live: true
