--- a/_data/take5/GYM-5013.yml
+++ b/_data/take5/GYM-5013.yml
@@ -2,7 +2,7 @@
 id: GYM-5013
 title: "Working with the Timeline in InVision Studio"
 date: 2019-11-06T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5013/
 img: /img/take5/posters/gym-5013.jpg
 live: true
