--- a/_data/take5/GYM-5014.yml
+++ b/_data/take5/GYM-5014.yml
@@ -2,7 +2,7 @@
 id: GYM-5014
 title: "Using Auto-Animate in Adobe XD"
 date: 2019-11-07T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5014/
 img: /img/take5/posters/gym-5014.jpg
 live: true
