--- a/_data/take5/GYM-5015.yml
+++ b/_data/take5/GYM-5015.yml
@@ -2,7 +2,7 @@
 id: GYM-5015
 title: "Creating Advanced Animations in Figma"
 date: 2019-11-08T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5015/
 img: /img/take5/posters/gym-5015.jpg
 live: true
