--- a/_data/take5/GYM-5016.yml
+++ b/_data/take5/GYM-5016.yml
@@ -2,7 +2,7 @@
 id: GYM-5016
 title: "Storytelling for Designers"
 date: 2019-11-11T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5016/
 img: /img/take5/posters/gym-5016.jpg
 live: true
