--- a/_data/take5/GYM-5018.yml
+++ b/_data/take5/GYM-5018.yml
@@ -2,7 +2,7 @@
 id: GYM-5018
 title: "Crafting Your Story"
 date: 2019-11-13T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5018/
 img: /img/take5/posters/gym-5018.jpg
 live: true
