--- a/_data/take5/GYM-5020.yml
+++ b/_data/take5/GYM-5020.yml
@@ -2,7 +2,7 @@
 id: GYM-5020
 title: "Knowing Your Audience"
 date: 2019-11-15T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5020/
 img: /img/take5/posters/gym-5020.jpg
 live: true
