--- a/_data/take5/GYM-5021.yml
+++ b/_data/take5/GYM-5021.yml
@@ -2,7 +2,7 @@
 id: GYM-5021
 title: "Using CSS Generated Content for Links"
 date: 2019-12-03T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5021/
 img: /img/take5/posters/gym-5021.jpg
 live: true
