--- a/_data/take5/GYM-5022.yml
+++ b/_data/take5/GYM-5022.yml
@@ -2,7 +2,7 @@
 id: GYM-5022
 title: "Creating a Pixel Perfect Icon in Sketch"
 date: 2019-12-10T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5022/
 img: /img/take5/posters/gym-5022.jpg
 live: true
