--- a/_data/take5/GYM-5023.yml
+++ b/_data/take5/GYM-5023.yml
@@ -2,7 +2,7 @@
 id: GYM-5023
 title: "Creating A Harmonious Color Scheme with HSL"
 date: 2020-01-13T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5023/
 img: /img/take5/posters/gym-5023.jpg
 live: true
