--- a/_data/take5/GYM-5024.yml
+++ b/_data/take5/GYM-5024.yml
@@ -2,7 +2,7 @@
 id: GYM-5024
 title: "Writing CSS Media Queries For Responsive Design"
 date: 2020-01-20T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5024/
 img: /img/take5/posters/gym-5024.jpg
 live: true
