--- a/_data/take5/GYM-5025.yml
+++ b/_data/take5/GYM-5025.yml
@@ -2,7 +2,7 @@
 id: GYM-5025
 title: "Getting Started with CSS Variables"
 date: 2020-01-27T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5025/
 img: /img/take5/posters/gym-5025.jpg
 live: true
