--- a/_data/take5/GYM-5027.yml
+++ b/_data/take5/GYM-5027.yml
@@ -2,7 +2,7 @@
 id: GYM-5027
 title: "Managing Your Time Like a Pro"
 date: 2020-02-10T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5027/
 img: /img/take5/posters/gym-5027.jpg
 live: true
