--- a/_data/take5/GYM-5030.yml
+++ b/_data/take5/GYM-5030.yml
@@ -2,7 +2,7 @@
 id: GYM-5030
 title: "Working with Overlays in Figma"
 date: 2020-03-03T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5030/
 img: /img/take5/posters/gym-5030.jpg
 live: true
