--- a/_data/take5/GYM-5031.yml
+++ b/_data/take5/GYM-5031.yml
@@ -2,7 +2,7 @@
 id: GYM-5031
 title: "Creating an Interactive Chart for the Web"
 date: 2020-03-31T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5031/
 img: /img/take5/posters/gym-5031.jpg
 live: true
