--- a/_data/take5/GYM-5032.yml
+++ b/_data/take5/GYM-5032.yml
@@ -2,7 +2,7 @@
 id: GYM-5032
 title: "Introduction to Screen Readers Using VoiceOver"
 date: 2020-06-22T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5032/
 img: /img/take5/posters/gym-5032.jpg
 live: true
