--- a/_data/take5/GYM-5033.yml
+++ b/_data/take5/GYM-5033.yml
@@ -2,7 +2,7 @@
 id: GYM-5033
 title: "Designing Beautiful Focus States"
 date: 2020-06-23T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5033/
 img: /img/take5/posters/gym-5033.jpg
 live: true
