--- a/_data/take5/GYM-5034.yml
+++ b/_data/take5/GYM-5034.yml
@@ -2,7 +2,7 @@
 id: GYM-5034
 title: "Flexible and Accessible Typesetting"
 date: 2020-06-24T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5034/
 img: /img/take5/posters/gym-5034.jpg
 live: true
