--- a/_data/take5/GYM-5036.yml
+++ b/_data/take5/GYM-5036.yml
@@ -2,7 +2,7 @@
 id: GYM-5036
 title: "Creating Beautiful and Accessible Drop Caps"
 date: 2020-06-26T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5036/
 img: /img/take5/posters/gym-5036.jpg
 live: true
