--- a/_data/take5/GYM-5037.yml
+++ b/_data/take5/GYM-5037.yml
@@ -2,7 +2,7 @@
 id: GYM-5037
 title: "Understanding Document Structure Accessibility"
 date: 2020-09-02T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5037/
 img: /img/take5/posters/gym-5037.jpg
 live: true
