--- a/_data/take5/GYM-5040.yml
+++ b/_data/take5/GYM-5040.yml
@@ -2,7 +2,7 @@
 id: GYM-5040
 title: "Improving Image Accessibility with Alt Text"
 date: 2020-09-29T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5040/
 img: /img/take5/posters/gym-5040.jpg
 live: true
