--- a/_data/take5/GYM-5041.yml
+++ b/_data/take5/GYM-5041.yml
@@ -2,7 +2,7 @@
 id: GYM-5041
 title: "Writing Effective and Accessible Alt Text"
 date: 2020-10-06T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5041/
 img: /img/take5/posters/gym-5041.jpg
 live: true
