--- a/_data/take5/GYM-5042.yml
+++ b/_data/take5/GYM-5042.yml
@@ -2,7 +2,7 @@
 id: GYM-5042
 title: "Understanding the Role of Color in Accessibility"
 date: 2020-10-13T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5042/
 img: /img/take5/posters/gym-5042.jpg
 live: true
