--- a/_data/take5/GYM-5043.yml
+++ b/_data/take5/GYM-5043.yml
@@ -2,7 +2,7 @@
 id: GYM-5043
 title: "Improving Accessibility with Color Contrast"
 date: 2020-10-20T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5043/
 img: /img/take5/posters/gym-5043.jpg
 live: true
