--- a/_data/take5/GYM-5045.yml
+++ b/_data/take5/GYM-5045.yml
@@ -2,7 +2,7 @@
 id: GYM-5045
 title: "Improving Form Usability and Accessibility"
 date: 2020-11-03T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5045/
 img: /img/take5/posters/gym-5045.jpg
 live: true
