--- a/_data/take5/GYM-5047.yml
+++ b/_data/take5/GYM-5047.yml
@@ -2,7 +2,7 @@
 id: GYM-5047
 title: "Creating Accessible Web Animations"
 date: 2020-11-17T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5047/
 img: /img/take5/posters/gym-5047.jpg
 live: true
