--- a/_data/take5/GYM-5050.yml
+++ b/_data/take5/GYM-5050.yml
@@ -2,7 +2,7 @@
 id: GYM-5050
 title: "Working with Auto Layout in Figma"
 date: 2021-06-15T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5050/
 img: /img/take5/posters/gym-5050.jpg
 live: true
