--- a/_data/take5/GYM-5053.yml
+++ b/_data/take5/GYM-5053.yml
@@ -2,7 +2,7 @@
 id: GYM-5053
 title: "Crafting a Concise About Page"
 date: 2022-08-24T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5053/
 img: /img/take5/posters/gym-5053.jpg
 live: true
