--- a/_data/take5/GYM-5056.yml
+++ b/_data/take5/GYM-5056.yml
@@ -2,7 +2,7 @@
 id: GYM-5056
 title: "Taking Your Portfolio Case Studies to the Next Level"
 date: 2022-12-05T00:00:00-04:00
-course_type: take5
+type: take5
 url: /courses/take5/GYM-5056/
 img: /img/take5/posters/gym-5056.jpg
 live: true
