--- a/_data/pages/courses.yml
+++ b/_data/pages/courses.yml
@@ -9,27 +9,27 @@ full_courses:
   format: "Full Courses"
   short_description: "Full Courses include a series of video lessons, optional quizzes and assignments, and a final exam and certificate if you pass. Plus, a forum to share work and get feedback from students and teaching assistants."
   hero_text: "Learn new skills in a day or less and earn a certificate."
-  hero_CTA: "View All Full Courses"
+  hero_cta: "View All Full Courses"
   promo_label: "Featured"
   promo_ID: "GYM-107"
 gym_shorts:
   format: "Gym Shorts"
   short_description: "Gym Shorts include a series of video lessons, a final exam, and a badge if you pass."
   hero_text: "Learn new skills in a few hours and earn a badge."
-  hero_CTA: "View All Gym Shorts"
+  hero_cta: "View All Gym Shorts"
   promo_label: "Featured"
   promo_ID: "GYM-017"
 take5_tutorials:
   format: "Take 5"
   short_description: "Take 5 tutorials are 5-minute video tutorials with easy-to-follow transcripts. No homework. No exam. Just free online learning."
   hero_text: "Learn new skills with 5-minute tutorials."
-  hero_CTA: "View All Tutorials"
+  hero_cta: "View All Tutorials"
   promo_label: "Featured"
   promo_ID: "GYM-5054"
 collections:
   format: "Collections"
   hero_text: "Explore specific topics with free courses, tutorials, resources, and jobs."
-  hero_CTA: "View All Collections"
+  hero_cta: "View All Collections"
   promo_label: "Featured"
   promo_ID: "design-systems"
 
@@ -38,29 +38,29 @@ featured:
   full_courses:
     promo_1:
       label: "Most Popular This Week"
-      ID: "GYM-107"
-      CTA: "Learn More"
+      id: "GYM-107"
+      cta: "Learn More"
     promo_2:
       label: "JavaScript for Beginners"
-      ID: "GYM-104"
-      CTA: "Learn More"
+      id: "GYM-104"
+      cta: "Learn More"
     promo_3:
       label: "User Experience 101"
-      ID: "GYM-103"
-      CTA: "Learn More"
+      id: "GYM-103"
+      cta: "Learn More"
   gym_shorts:
     promo_1:
       label: "Most Popular This Week"
-      ID: "GYM-018"
-      CTA: "Learn More"
+      id: "GYM-018"
+      cta: "Learn More"
     promo_2:
       label: "Accessibility Skills"
-      ID: "GYM-016"
-      CTA: "Learn More"
+      id: "GYM-016"
+      cta: "Learn More"
     promo_3:
       label: "Benefits of Prototyping"
-      ID: "GYM-015"
-      CTA: "Learn More"
+      id: "GYM-015"
+      cta: "Learn More"
 
 about:
   summary: "Learn About Our Courses"
