--- a/_data_config.yml
+++ b/_data_config.yml
@@ -1,6 +1,7 @@
 # Setup
 title: Gymnasium Data Feeds
 url: https://data--thegymcms.netlify.app #https://data.thegymcms.com
+lms_url: https://learn.gym.soy
 gymurl: https://thegymnasium.com
 aqassetsurl: https://assets.aquent.com
 timezone: America/New_York
