add additional urls per environment

--- a/_local_config.yml
+++ b/_local_config.yml
@@ -2,6 +2,8 @@
 title: Gymnasium Static Content
 url: http://localhost:4000
 lms_url: https://learn.gym.soy
+astro_url: http://localhost:3030
+eleventy_url: http://localhost:4040
 gymurl: https://courses.gymna.si
 aqassetsurl: https://stag-assets.aquent.com
 timezone: America/New_York
