--- a/_data_config.yml
+++ b/_data_config.yml
@@ -2,6 +2,8 @@
 title: Gymnasium Data Feeds
 url: https://data--thegymcms.netlify.app #https://data.thegymcms.com
 lms_url: https://learn.gym.soy
+astro_url: https://astro.gym.soy
+eleventy_url: https://11ty.gym.soy
 gymurl: https://thegymnasium.com
 aqassetsurl: https://assets.aquent.com
 timezone: America/New_York
