--- a/_data/config.yml
+++ b/_data/config.yml
@@ -1,7 +1,7 @@
 meta: 
-  title: Aquent Gymnasium
-  subtitle: 
-  author: Gymnasium
+  title: Gymnasium
+  subtitle: Free online courses on design and development
+  author: Aquent Gymnasium
   description: Design a career you love with free online courses on design, development, accessibility, prototyping, UX, and career skills.
   og_img: /img/brand/og/gym-brand-og.png
   twitter_handle: "@AquentGymnasium"
