--- a/_data/take5/GYM-5054.yml
+++ b/_data/take5/GYM-5054.yml
@@ -1,10 +1,10 @@
 ---
-course_ID: GYM-5055
-title: "Creating an Effective Color Palette in Design"
+course_ID: GYM-5054
+title: "Getting Contrast Right in Your Typography"
 date: 2023-07-05T00:00:00-04:00
 course_type: take5
-url: /courses/take5/GYM-5055/
-poster_art: /img/take5/posters/gym-5055.jpg
+url: /courses/take5/GYM-5054/
+poster_art: /img/take5/posters/gym-5054.jpg
 live: false
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
