Update tutorial content
- Update short description
- Update transcript formatting

--- a/_data/take5/GYM-5055.yml
+++ b/_data/take5/GYM-5055.yml
@@ -14,7 +14,7 @@ subtopics:
 video_ID: L0UHez2PNB4
 video_duration: "4:14"
 featured: false
-short_description: "Learn how to choose an effective color palette for your designs. In this tutorial by Meagan Fisher for Gymnasium, you’ll discover how color relates to brand, accessibility, and fuser experience."
+short_description: "Learn how to choose a color palette that strengthens the branding, accessibility, and UX of your design in this tutorial."
 project_file_source:
 project_files:
 related_content:
