--- a/_data/take5/GYM-5055.yml
+++ b/_data/take5/GYM-5055.yml
@@ -11,7 +11,7 @@ instructor_bio: "Web Developer and Designer at Owltastic"
 topic: "Design"
 subtopics:
   - label: "Accessibility"
-video_ID: L0UHez2PNB4
+video_ID: KrN5qckZ7iA
 video_duration: "4:14"
 featured: false
 short_description: "Learn how to choose a color palette that strengthens the branding, accessibility, and UX of your design in this tutorial."
