--- a/_data/take5/GYM-5055.yml
+++ b/_data/take5/GYM-5055.yml
@@ -5,9 +5,9 @@ date: 2023-03-16T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5055/
 poster_art: /img/take5/posters/gym-5055.jpg
-live: false
+live: true
 instructor: "Meagan Fisher"
-instructor_bio: "Web Developer and Designer at Owltastic"
+instructor_bio: "Web Designer and Developer at Owltastic"
 topic: "Design"
 subtopics:
   - label: "Accessibility"
@@ -18,7 +18,7 @@ short_description: "Learn how to choose a color palette that strengthens the bra
 project_file_source:
 project_files:
 related_content:
-- label: "Color Contrast Checker: Check the contrast between different color combinations against Web Content Accessibility Guidelines (WCAG) and find the closest accessible colors"
+- label: "Colour Contrast Checker"
   url: "https://colourcontrast.cc"
 - label: "Color Theory 101: A Complete Guide to Color Wheels & Color Scheme by Bethany Cartwright"
   url: "https://blog.hubspot.com/marketing/color-theory-design"
