--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -4,7 +4,7 @@ auth_promo: hero-take5-portfolio.html
 # Live Stream
 # Set true/false (lowercase).
 # Note: true overrides current/auth promo heros
-live_stream: false
+live_stream: true
 
 # Source
 # Set twitch/youtube (lowercase)
@@ -14,14 +14,14 @@ embed_source: "youtube"
 # Content
 # Update per live stream, if needed
 title: "Livestream"
-short_description: "DIY AI"
-byline: "The Gymnasium Team"
+short_description: "AI-Powered Mockup Magic: Prototyping Landing Pages with ChatGPT and Midjourney"
+byline: ""
 
 # twitch
 twitch_channel: "andrewpmiller"
 
 # youtube
-youtube_video_ID: "uA1Ho_bfMhw"
+youtube_video_ID: "tJ_eN805Y6w"
 
 # Aspect Ratio 16:19
 embed_width: "854"
