Update livestream hero
- Update livestream title (shorten, again)

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -14,7 +14,7 @@ embed_source: "youtube"
 # Content
 # Update per live stream, if needed
 title: "Livestream"
-short_description: "AI-Powered Mockup Magic: Prototyping Landing Pages"
+short_description: "AI-Powered Mockup Magic"
 byline: "with Andrew Miller and Jeremy Osborn"
 
 # twitch
