--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -4,7 +4,7 @@ auth_promo: hero-take5-portfolio.html
 # Live Stream
 # Set true/false (lowercase).
 # Note: true overrides current/auth promo heros
-live_stream: true
+live_stream: false
 
 # Source
 # Set twitch/youtube (lowercase)
