Update GYM-5057 content
- Update video ID

--- a/_data/take5/GYM-5057.yml
+++ b/_data/take5/GYM-5057.yml
@@ -11,7 +11,7 @@ instructor_bio: "Web Designer and Developer at Owltastic"
 topic: "Design"
 subtopics:
   - label: "Accessibility"
-video_ID: BBjSq0PtgTs
+video_ID: FDlpkWUp8wk
 video_duration: "4:39"
 featured: false
 short_description: Learn how to use grids, whitespace, and responsive design to make better layouts for your web pages in this tutorial.
