Update home page hero
- Update promo

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,5 +1,5 @@
-current_promo: hero-take5-portfolio.html
-auth_promo: hero-take5-portfolio.html
+current_promo: hero-take5-design-basics.html
+auth_promo: hero-take5-design-basics.html
 
 # Live Stream
 # Set true/false (lowercase).
