Update GYM-5054 content
- Update video ID

--- a/_data/take5/GYM-5054.yml
+++ b/_data/take5/GYM-5054.yml
@@ -11,7 +11,7 @@ instructor_bio: "Web Designer and Developer at Owltastic"
 topic: "Design"
 subtopics:
   - label: "Accessibility"
-video_ID: MPxEtMX-rqI
+video_ID: oaAJzDFXHvc
 video_duration: "4:17"
 featured: true
 short_description: "Learn how contrast in your typography can improve your content’s structure, readability, and accessibility in this tutorial."
