Add per-page banner support
- also update README with Docker Compose V2 Migration notes

--- a/_dev_config.yml
+++ b/_dev_config.yml
@@ -5,7 +5,8 @@ gymurl: https://courses.gymna.si
 aqassetsurl: https://stag-assets.aquent.com
 timezone: America/New_York
 environment: development
-   
+banner: true
+
 # Building
 
 exclude:
