--- a/_local_config.yml
+++ b/_local_config.yml
@@ -5,6 +5,7 @@ gymurl: https://courses.gymna.si
 aqassetsurl: https://stag-assets.aquent.com
 timezone: America/New_York
 environment: local
+banner: true
 
 # Building
 
