--- a/_production_config.yml
+++ b/_production_config.yml
@@ -5,6 +5,7 @@ gymurl: https://thegymnasium.com
 aqassetsurl: https://assets.aquent.com
 timezone: America/New_York
 environment: production
+banner: true
 
 # Building
 
