--- a/_local_config.yml
+++ b/_local_config.yml
@@ -6,6 +6,9 @@ aqassetsurl: https://stag-assets.aquent.com
 timezone: America/New_York
 environment: local
 banner: true
+banner_exclude:
+  - url: /anniversary
+  - url: /anniversary/
 
 # Building
 
