Update collections order
- Update data file naming convention for manual order
- Add data order/value pair to match filename
- Remove landing page reversed sort order

--- a/_data/collections/03-COL-006.yml
+++ b/_data/collections/03-COL-006.yml
@@ -4,4 +4,5 @@ title: "Design Systems"
 topic: "Design Systems"
 short_description: "Teamwork (and creating effective pattern libraries) makes the dream work."
 url: https://thegymnasium.com/design-systems
+order: 3
 ---
