--- a/_data/collections/02-COL-003.yml
+++ b/_data/collections/02-COL-003.yml
@@ -4,4 +4,5 @@ title: "Prototyping"
 topic: "Prototyping"
 short_description: "Take the guesswork out of your design process and build better products."
 url: https://thegymnasium.com/prototyping
+order: 2
 ---
