--- a/_data/collections/04-COL-002.yml
+++ b/_data/collections/04-COL-002.yml
@@ -4,4 +4,5 @@ title: "UX Design"
 topic: "UX"
 short_description: "User experience can make or break a website. Let’s put yours to the test."
 url: https://thegymnasium.com/ux-design
+order: 4
 ---
