--- a/_data/collections/05-COL-001.yml
+++ b/_data/collections/05-COL-001.yml
@@ -4,4 +4,5 @@ title: "Web Development"
 topic: "Development"
 short_description: "Develop the skills you need to build fast, responsive websites."
 url: https://thegymnasium.com/web-development
+order: 5
 ---
