--- a/_data/collections/06-COL-005.yml
+++ b/_data/collections/06-COL-005.yml
@@ -4,4 +4,5 @@ title: "Remote Work"
 topic: "Career Skills"
 short_description: "Whether you’re WFH or a digital nomad, we’ve got you covered."
 url: https://thegymnasium.com/remote-work
+order: 6
 ---
