--- a/_data/pages/courses.yml
+++ b/_data/pages/courses.yml
@@ -1,5 +1,5 @@
 ---
-main:
+header:
   title: "Courses"
   tagline: "Free online courses and tutorials."
   short_description: "Learn design, development, UX, accessibility, and career skills from industry experts."
