--- a/_data/take5/GYM-5054.yml
+++ b/_data/take5/GYM-5054.yml
@@ -14,7 +14,7 @@ subtopics:
 video_ID: oaAJzDFXHvc
 video_duration: "4:17"
 featured: true
-short_description: "Learn how contrast in your typography can improve your content’s structure, readability, and accessibility in this tutorial."
+description: "Learn how contrast in your typography can improve your content’s structure, readability, and accessibility in this tutorial."
 project_file_source:
 project_files:
 related_content:
