--- a/_data/take5/GYM-5055.yml
+++ b/_data/take5/GYM-5055.yml
@@ -14,7 +14,7 @@ subtopics:
 video_ID: KrN5qckZ7iA
 video_duration: "4:14"
 featured: false
-short_description: "Learn how to choose a color palette that strengthens the branding, accessibility, and UX of your design in this tutorial."
+description: "Learn how to choose a color palette that strengthens the branding, accessibility, and UX of your design in this tutorial."
 project_file_source:
 project_files:
 related_content:
