--- a/_data/take5/GYM-5057.yml
+++ b/_data/take5/GYM-5057.yml
@@ -14,7 +14,7 @@ subtopics:
 video_ID: FDlpkWUp8wk
 video_duration: "4:39"
 featured: false
-short_description: Learn how to use grids, whitespace, and responsive design to make better layouts for your web pages in this tutorial.
+description: Learn how to use grids, whitespace, and responsive design to make better layouts for your web pages in this tutorial.
 project_file_source:
 project_files:
 related_content:
