id to lowercase, use id instead of course_id

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -21,7 +21,7 @@ byline: "with Andrew Miller and Jeremy Osborn"
 twitch_channel: "andrewpmiller"
 
 # youtube
-youtube_video_ID: "S5ySexy58kI"
+youtube_video_id: "S5ySexy58kI"
 
 # Aspect Ratio 16:19
 embed_width: "854"
