--- a/_data/heros/articles/ai-mockup-magic.yml
+++ b/_data/heros/articles/ai-mockup-magic.yml
@@ -1,7 +1,7 @@
 id: ai-mockup-magic
 subhead: "New Article"
 title: "AI Mockup Magic: Prototyping Landing Pages with LLMs"
-description: "Automagically prototype faster with more meaningful content and less gray boxes and lorem ipsum. Learn how to turn a prompt into productivity in our latest article (and livestream)."
+description: "Automagically prototype faster and better with less gray boxes and lorem ipsum. Learn how to turn a prompt into productivity in our latest article summing up our livestream."
 cta: "Embrace the Magic"
 cta_url: https:medium.com/gymnasium/
 alt_text: "Automagical mockups shown on various screens and devices."
