--- a/_data/heros/articles/ai-mockup-magic.yml
+++ b/_data/heros/articles/ai-mockup-magic.yml
@@ -1,10 +1,10 @@
 id: ai-mockup-magic
 subhead: "New Article"
 title: "AI Mockup Magic: Prototyping Landing Pages with LLMs"
-description: "Automagically prototype faster and better with less gray boxes and lorem ipsum. Learn how to turn a prompt into productivity in our latest article summing up our livestream."
+description: "Magically prototype faster and better without gray boxes or lorem ipsum. Learn how to turn a prompt into productivity in our latest article."
 cta: "Embrace the Magic"
 cta_url: https:medium.com/gymnasium/
-alt_text: "Automagical mockups shown on various screens and devices."
+alt_text: "Mockups shown on various screens and devices with the magic of AI."
 artwork:
   1: /ai-mockup-magic-768w.jpg
   2: /ai-mockup-magic-1280w.jpg
