Update livestream hero
- Update description

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -14,7 +14,7 @@ embed_source: "youtube"
 # Content
 # Update per live stream, if needed
 title: "Livestream"
-short_description: "Testing the Limits of LLMs"
+short_description: "Picture Perfect: Using AI to Enhance Images"
 byline: "with Andrew Miller and Jeremy Osborn"
 
 # twitch
