Update collections landing page
- Update sort order

--- a/_data/collections/06-COL-005.yml
+++ b/_data/collections/06-COL-005.yml
@@ -5,4 +5,5 @@ topic: "Career Skills"
 short_description: "Whether you’re WFH or a digital nomad, we’ve got you covered."
 url: https://thegymnasium.com/remote-work
 order: 6
+exclude: true
 ---
