--- a/_local_config.yml
+++ b/_local_config.yml
@@ -2,7 +2,7 @@
 title: Gymnasium Static Content
 url: http://localhost:4000
 gymurl: https://courses.gymna.si
-aqassetsurl: https://stag-assets.aquent.com
+aqassetsurl: https://assets.aquent.com
 timezone: America/New_York
 environment: local
 banner: true
